# puck_duel

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  clean_dead_code.py  fix_udp.py  package-lock.json  package.json  patch.py  patch_game_rs.sh  patch_gfx.py  patch_scene.js  patch_scene_2.js  patch_tests.py  pb_schema.json  privacy_policy.html  release.keystore  svelte.config.js  vite.config.js
.github/: copilot-instructions.md
deploy/: game-server.service
frontend-src/: app.css
frontend-src/lib/components/: Game.svelte  QRScanner.svelte
frontend-src/routes/: +page.svelte
game-server/: Cargo.toml
game-server/src/: main.rs
puckduel-core/: Cargo.toml
puckduel-core/src/: config.rs  game.rs  lib.rs  physics.rs
relay-server/: Cargo.toml  Dockerfile  fly.toml
relay-server/src/: main.rs
scripts/: deploy-server.sh  setup-vps.sh
src-tauri/: .env.example  .gitignore  Cargo.toml  build.rs  scratch.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  game.rs  lib.rs  physics.rs  relay.rs  transport.rs  udp_server.rs  udp_transport.rs
src/lib/: audio.ts  matchbox.ts  pocketbase.ts
src/lib/components/: Game.svelte  QRScanner.svelte  Scene.svelte  Scene.svelte.bak
src/routes/: +page.svelte
